--- a/gowuche.html
+++ b/gowuche.html
@@ -36,7 +36,7 @@
                     <label for="shop_a" class="shop"></label>
                 </div>
                 <div class="shop_name">
-                    店铺：<a href="javascript:;">浪琴旗舰店</a>
+                    店铺：<a href="javascript:;">联想</a>
                 </div>
             </div>
             <div class="order_content">
@@ -46,16 +46,16 @@
                         <label for="checkbox_2"></label>
                     </li>
                     <li class="list_con">
-                        <div class="list_img"><a href="javascript:;"><img src="images/zs11w.jpg" alt=""></a></div>
-                        <div class="list_text"><a href="javascript:;">夏季男士迷彩无袖T恤圆领潮流韩版修身男装背心青年时尚打底衫男</a></div>
+                        <div class="list_img"><a href="javascript:;"><img src="img/lll8.png" alt=""></a></div>
+                        <div class="list_text"><a href="javascript:;">AIO 520 23.8英寸一体机i5/8G/1T/独立显卡/黑色</a></div>
                     </li>
                     <li class="list_info">
                             <p>规格：默认</p>
-                            <p>尺寸：16*16*3(cm)</p>
+                            <p>尺寸：23.8英寸</p>
                         </li>
                     
                     <li class="list_price">
-                        <p class="price">￥980</p>
+                        <p class="price">￥5199</p>
                     </li>
                     <li class="list_amount">
                         <div class="amount_box">
@@ -65,7 +65,7 @@
                         </div>
                     </li>
                     <li class="list_sum">
-                        <p class="sum_price">￥980</p>
+                        <p class="sum_price">￥5199</p>
                     </li>
                     <li class="list_op">
                             <p class="del"><a href="javascript:;" class="delBtn">删除</a></p>
@@ -78,15 +78,15 @@
                         <label for="checkbox_3"></label>
                     </li>
                     <li class="list_con">
-                        <div class="list_img"><a href="javascript:;"><img src="images/zs11w.jpg" alt=""></a></div>
-                        <div class="list_text"><a href="javascript:;">夏季男士迷彩无袖T恤圆领潮流韩版修身男装背心青年时尚打底衫男</a></div>
+                        <div class="list_img"><a href="javascript:;"><img src="img/lll9.png" alt=""></a></div>
+                        <div class="list_text"><a href="javascript:;">小新 潮7000 14.0英寸i7-8550U/8GB/1T+128G SSD/940MX</a></div>
                     </li>
                     <li class="list_info">
                             <p>规格：默认</p>
-                            <p>尺寸：16*16*3(cm)</p>
+                            <p>尺寸：14.0英寸</p>
                         </li>
                     <li class="list_price">
-                        <p class="price">￥780</p>
+                        <p class="price">￥5499</p>
                     </li>
                     <li class="list_amount">
                         <div class="amount_box">
@@ -96,7 +96,7 @@
                         </div>
                     </li>
                     <li class="list_sum">
-                        <p class="sum_price">￥780</p>
+                        <p class="sum_price">￥5499</p>
                     </li>
                     <li class="list_op">
                             <p class="del"><a href="javascript:;" class="delBtn">删除</a></p>
@@ -109,15 +109,15 @@
                         <label for="checkbox_6"></label>
                     </li>
                     <li class="list_con">
-                        <div class="list_img"><a href="javascript:;"><img src="images/zs11w.jpg" alt=""></a></div>
-                        <div class="list_text"><a href="javascript:;">夏季男士迷彩无袖T恤圆领潮流韩版修身男装背心青年时尚打底衫男</a></div>
+                        <div class="list_img"><a href="javascript:;"><img src="img/lll10.png" alt=""></a></div>
+                        <div class="list_text"><a href="javascript:;">拯救者 R720 15.6英寸i7/8G/1T+128G SSD/GTX 1060 Max Q</a></div>
                     </li>
                     <li class="list_info">
                             <p>规格：默认</p>
-                            <p>尺寸：16*16*3(cm)</p>
+                            <p>尺寸：15.6英寸</p>
                         </li>
                     <li class="list_price">
-                        <p class="price">￥180</p>
+                        <p class="price">￥7999</p>
                     </li>
                     <li class="list_amount">
                         <div class="amount_box">
@@ -127,7 +127,7 @@
                         </div>
                     </li>
                     <li class="list_sum">
-                        <p class="sum_price">￥180</p>
+                        <p class="sum_price">￥7999</p>
                     </li>
                     <li class="list_op">
                             <p class="del"><a href="javascript:;" class="delBtn">删除</a></p>
@@ -145,7 +145,7 @@
                     <label for="shop_b" class="shop"></label>
                 </div>
                 <div class="shop_name">
-                    店铺：<a href="javascript:;">浪琴旗舰店</a>
+                    商品：<a href="javascript:;">显示屏</a>
                 </div>
             </div>
             <div class="order_content">
@@ -155,15 +155,15 @@
                         <label for="checkbox_4"></label>
                     </li>
                     <li class="list_con">
-                        <div class="list_img"><a href="javascript:;"><img src="images/zs11w.jpg" alt=""></a></div>
-                        <div class="list_text"><a href="javascript:;">夏季男士迷彩无袖T恤圆领潮流韩版修身男装背心青年时尚打底衫男</a></div>
+                        <div class="list_img"><a href="javascript:;"><img src="img/xianshipi2.png" alt=""></a></div>
+                        <div class="list_text"><a href="javascript:;">240Hz刷新率25英寸专业电竞显示器</a></div>
                     </li>
                     <li class="list_info">
                             <p>规格：默认</p>
-                            <p>尺寸：16*16*3(cm)</p>
+                            <p>尺寸：25.0英寸</p>
                         </li>
                     <li class="list_price">
-                        <p class="price">￥1980</p>
+                        <p class="price">￥5499</p>
                     </li>
                     <li class="list_amount">
                         <div class="amount_box">
@@ -173,7 +173,7 @@
                         </div>
                     </li>
                     <li class="list_sum">
-                        <p class="sum_price">￥1980</p>
+                        <p class="sum_price">￥5499</p>
                     </li>
                     <li class="list_op">
                             <p class="del"><a href="javascript:;" class="delBtn">删除</a></p>
@@ -186,15 +186,15 @@
                         <label for="checkbox_5"></label>
                     </li>
                     <li class="list_con">
-                        <div class="list_img"><a href="javascript:;"><img src="images/zs11w.jpg" alt=""></a></div>
-                        <div class="list_text"><a href="javascript:;">夏季男士迷彩无袖T恤圆领潮流韩版修身男装背心青年时尚打底衫男</a></div>
+                        <div class="list_img"><a href="javascript:;"><img src="img/xianshipi3.png" alt=""></a></div>
+                        <div class="list_text"><a href="javascript:;">240Hz刷新率 FreeSyncALIENWARE 25英寸专业电竞显示器-2518HF</a></div>
                     </li>
                     <li class="list_info">
                             <p>规格：默认</p>
-                            <p>尺寸：16*16*3(cm)</p>
+                            <p>尺寸：25.0英寸</p>
                         </li>
                     <li class="list_price">
-                        <p class="price">￥480</p>
+                        <p class="price">￥2999</p>
                     </li>
                     <li class="list_amount">
                         <div class="amount_box">
@@ -204,7 +204,7 @@
                         </div>
                     </li>
                     <li class="list_sum">
-                        <p class="sum_price">￥480</p>
+                        <p class="sum_price">￥2999</p>
                     </li>
                     <li class="list_op">
                             <p class="del"><a href="javascript:;" class="delBtn">删除</a></p>
@@ -222,7 +222,7 @@
                     <label for="shop_c" class="shop"></label>
                 </div>
                 <div class="shop_name">
-                    店铺：<a href="javascript:;">浪琴旗舰店</a>
+                    店铺：<a href="javascript:;">戴尔</a>
                 </div>
             </div>
             <div class="order_content">
@@ -232,15 +232,15 @@
                         <label for="checkbox_8"></label>
                     </li>
                     <li class="list_con">
-                        <div class="list_img"><a href="javascript:;"><img src="images/zs11w.jpg" alt=""></a></div>
-                        <div class="list_text"><a href="javascript:;">夏季男士迷彩无袖T恤圆领潮流韩版修身男装背心青年时尚打底衫男</a></div>
+                        <div class="list_img"><a href="javascript:;"><img src="img/dell1.png" alt=""></a></div>
+                        <div class="list_text"><a href="javascript:;">戴尔USB-C移动适配器 - DA300</a></div>
                     </li>
                     <li class="list_info">
                             <p>规格：默认</p>
                             <p>尺寸：16*16*3(cm)</p>
                         </li>
                     <li class="list_price">
-                        <p class="price">￥1980</p>
+                        <p class="price">￥428.99</p>
                     </li>
                     <li class="list_amount">
                         <div class="amount_box">
@@ -250,7 +250,7 @@
                         </div>
                     </li>
                     <li class="list_sum">
-                        <p class="sum_price">￥1980</p>
+                        <p class="sum_price">￥428.99</p>
                     </li>
                     <li class="list_op">
                             <p class="del"><a href="javascript:;" class="delBtn">删除</a></p>
@@ -263,15 +263,15 @@
                         <label for="checkbox_9"></label>
                     </li>
                     <li class="list_con">
-                        <div class="list_img"><a href="javascript:;"><img src="images/zs10w.jpg" alt=""></a></div>
-                        <div class="list_text"><a href="javascript:;">夏季男士迷彩无袖T恤圆领潮流韩版修身男装背心青年时尚打底衫男</a></div>
+                        <div class="list_img"><a href="javascript:;"><img src="img/dell2.png" alt=""></a></div>
+                        <div class="list_text"><a href="javascript:;">戴尔超薄电源适配器 - 65瓦</a></div>
                     </li>
                     <li class="list_info">
                             <p>规格：默认</p>
                             <p>尺寸：16*16*3(cm)</p>
                         </li>
                     <li class="list_price">
-                        <p class="price">￥480</p>
+                        <p class="price">￥148</p>
                     </li>
                     <li class="list_amount">
                         <div class="amount_box">
@@ -281,7 +281,7 @@
                         </div>
                     </li>
                     <li class="list_sum">
-                        <p class="sum_price">￥480</p>
+                        <p class="sum_price">￥148</p>
                     </li>
                     <li class="list_op">
                         <p class="del"><a href="javascript:;" class="delBtn">删除</a></p>
